--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,17 +4,17 @@
     display: flex;
     flex-direction: row;
 }
-.Logo{
+.logo{
     margin: 1%;
     width: 5%; 
     height: 5%;
 }
-.TextLogo{
-    margin-top: 2.5%;
+.textLogo{
+    margin-top: 2%;
     color: black;
     font-size: 100%;
 }
-.NavCategories{
+.navCategories{
     list-style: none;
     margin-top: 2.5%;
     margin-left: 13%;
@@ -26,11 +26,11 @@
     justify-content: flex-start;
     justify-content: space-evenly;
 }
-.NavItem{
+.navItem{
     background-color: #4BD1A0;
     width: 15%;
 }
-.NavLink{
+.navLink{
     text-transform: uppercase;
     color: #E72E91;
     display: block;
@@ -41,13 +41,13 @@
     text-align: center;
     text-decoration: none;
 }
-.LogIcon{
+.logIcon{
     width: 25%;
     padding: 0%;    
 }
-.LogIn{
+.logIn{
     padding: 0.5%;
-    margin-left: 20%;
+    margin-left: 15%;
     margin-top: 2%;
     margin-right: 1%;
     border-radius: 10%;
@@ -55,7 +55,7 @@
     color: white;
     font-size: 70%;
     width: 7%;
-    height: 55%;
+    height: 60%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
