Creación de compinentes ItemDetail e ItemDetailContainer/ Configuracion de Routing

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,14 +1,23 @@
 .sectionProd{
-    height: 30%;
+    height: 350px;
+    width: 250px;
+    margin-left: 10%;
+}
+.nameProd{
+    font-size: 100%;
+    font-weight: 700;
 }
 .imgProd{
-    width: 30%;
+    width: 50%;
     height: auto;
 }
-.botonDet{
-    background-color: #4BD1A0;
-    padding: 0.5%;
+.Info{
     font-weight: 700;
+}
+.botonDet{
+    text-decoration: none;
+    background-color: #4BD1A0;
+    padding: 2%;
     border-radius: 5%;
     color: #E72E91;
     border-color: #4BD1A0;
