--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,33 +6,47 @@
 }
 .logo{
     margin: 1%;
-    width: 5%; 
-    height: 5%;
+    width: 8%; 
+    height: 8%;
+}
+.linkHome{
+    margin-top: 3.5%;
+    text-decoration: none;
 }
 .textLogo{
-    margin-top: 2%;
+    margin-top: 3.5%;
     color: black;
     font-size: 100%;
 }
 .navCategories{
-    list-style: none;
-    margin-top: 2.5%;
-    margin-left: 13%;
+    margin-top: 3.5%;
+    margin-left: 15%;
     padding: 0px;
     width: 40%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-start;
-    justify-content: space-evenly;
-}
-.navItem{
+    justify-content: space-between;
     background-color: #4BD1A0;
     width: 15%;
 }
-.navLink{
+
+.NavLinkActive{
+    margin-left: 20%;
     text-transform: uppercase;
     color: #E72E91;
+    display: block;
+    font-size: 100%;
+    font-weight: 700;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+    text-decoration: none;
+}
+.NavLinkOption{
+    margin-left: 20%;
+    text-transform: uppercase;
+    color: black;
     display: block;
     font-size: 100%;
     font-weight: 700;
@@ -47,8 +61,8 @@
 }
 .logIn{
     padding: 0.5%;
-    margin-left: 15%;
-    margin-top: 2%;
+    margin-left: 30%;
+    margin-top: 3.5%;
     margin-right: 1%;
     border-radius: 10%;
     background-color: black;
