desafio cartView y correcciones Counter

--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -20,3 +20,9 @@
     width: 25%;
     padding: 0%; 
 }
+.linkCart{
+    color: white;
+    font-size: 100%;
+    font-weight: 700;
+    text-decoration: none;
+}
