--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,8 +1,8 @@
 .listCart{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: center;
+    justify-content: space-between;
 }
 .columnsTitle{
     font-size: 100%;
@@ -19,8 +19,9 @@
     border-radius: 7%;
     color:#4BD1A0;
     border-color: #E72E91; 
-    width: 20%;
-    font-weight: 500;
+    width: 15%;
+    font-weight: 700;
+    height: 5%;
 }
 .confirmBuy{
     text-decoration: none;
@@ -29,7 +30,9 @@
     border-radius: 7%;
     color: #E72E91;
     border-color: #4BD1A0;
-    width: 20%;
+    width: 15%;
+    font-weight: 700;
+    height: 5%;
 }
 .formBuyLink{
     color: #E72E91;
