--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -2,9 +2,15 @@
     background-color: lightgray;
     border-radius: 5%;
     justify-content: center;
-    margin-top: 7%;
-    width: 60%;
+    margin-top: 3%;
+    margin-left: 30%;
+    width: 50%;
+    height: 30%;
 }
 .itemCart{
     font-size: 100%;
+}
+.deleteProd{
+    color: red;
+    font-weight: 700;
 }
